[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://sounds/gameover.wav" type="AudioStream" id=2]
[ext_resource path="res://levels/level1/level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/Intro Theme.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/level_won.wav" type="AudioStream" id=5]
[ext_resource path="res://levels/hud/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/endlevel/end_level.tscn" type="PackedScene" id=8]

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( -187.77, 48.8201 )
z_index = 10
jump_speed = -1500

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="gameover_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="End_level" parent="." instance=ExtResource( 8 )]
position = Vector2( 4087.58, 53.9264 )

[node name="you_won_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Level1_Node" parent="." instance=ExtResource( 3 )]

[connection signal="level_won" from="Player" to="." method="level_won"]
[connection signal="open_menu" from="Player" to="HUD" method="open_menu"]
[connection signal="player_died" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="level_won" from="End_level" to="Player" method="level_won"]
